Fix form overlapping card bug

--- a/style.css
+++ b/style.css
@@ -87,13 +87,12 @@ header button {
 
 .main-form {
   position: relative;
-  display: flex;
   flex-direction: column;
   background-color: white;
   padding: 30px;
   gap: 10px;
   border-radius: 10px;
-  visibility: hidden;
+  display: none;
 }
 
 #form-close {
